# poly_arb_bot

./: .gitignore  README.md  main.py  pyproject.toml
polymarket_arb/: __init__.py  app.py  arbitrage_engine.py  config.py  market_streamer.py  orderbook.py  shadow_executor.py
polymarket_arb/clients/: __init__.py  clob.py
